vistas de cliente hechas y modificacion del index 2

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,18 +2,16 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #[em LocalLibrary], a very basic Express website developed as a tutorial example on the Mozilla Developer Network.
+  p ¡Bienvenido al #[em Multi Concesionario]!
 
-  h1 Dynamic content
+  h1 Resumen
 
   if error
-    p Error getting dynamic content.
+    p Error al contar.
   else
-    p The library has the following record counts:
+    p En este concesionaio se ha guardado estas cuentas:
 
     ul
-      li #[strong Books:] !{data.book_count}
-      li #[strong Copies:] !{data.book_instance_count}
-      li #[strong Copies available:] !{data.book_instance_available_count} 
-      li #[strong Authors:] !{data.author_count}
-      li #[strong Genres:] !{data.genre_count}
+      li #[strong Coches:] !{data.coche_count}
+      li #[strong Concesionarios:] !{data.concesionario_count}
+      li #[strong Clientes:] !{data.cliente_count}
