correccion de errores de vista de concesionario y cliente.

--- a/views/coche_form.pug
+++ b/views/coche_form.pug
@@ -37,7 +37,7 @@ block content
 
       label(for='cliente') Cliente:
       select#cliente.form-control(type='select' placeholder='Selecciona el cliente' name='cliente' required='true' )
-        for cliente in clietes
+        for cliente in clientes
           if coche
             option(
               value=cliente._id
