--- a/views/concesionario_detail.pug
+++ b/views/concesionario_detail.pug
@@ -13,4 +13,6 @@ block content
 
   hr
   p
-  a(href=concesionario.url+'/delete') Delete concesionario
+    a(href=concesionario.url+'/delete') Delete concesionario
+  p
+    a(href=concesionario.url+'/update') Update concesionario
