se ha añadido el delete y update de concesionario y cliente

--- a/views/cliente_detail.pug
+++ b/views/cliente_detail.pug
@@ -19,3 +19,9 @@ block content
 
       else
         p Este cliente no ha comprado ningun coche
+
+  hr
+  p
+    a(href=cliente.url+'/delete') Delete cliente
+  p
+    a(href=cliente.url+'/update') Update cliente
